--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
+<head>
+  <script src="css/source-sand-pro.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+
 <body>
   <script id="home-tpl" type="text/x-handlbars-template">
     <div class='header'><h1>Home</h1></div>
-    <div class='search-view'><input class='search-key' type="text"/></div>
+    <div class='search-bar'><input class='search-key' type="search"/></div>
     <ul class='employee-list'></ul>
   </script>
 
@@ -16,9 +21,9 @@
     {{/.}}
   </script>
   
-  <script src="lib/handlebars.js"></script>
   <script src="phonegap.js"></script>
   <script src="lib/jquery-1.8.2.min.js"></script>
+  <script src="lib/handlebars.js"></script>
   <script src="js/storage/memory-store.js"></script>
   <script src="js/HomeView.js"></script>
   <script src="js/main.js"></script>
