--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script id="home-tpl" type="text/x-handlbars-template">
     <div class='header'><h1>Home</h1></div>
     <div class='search-bar'><input class='search-key' type="search"/></div>
-    <ul class='employee-list'></ul>
+    <div class="scroll"><ul class='employee-list'></ul></div>
   </script>
 
   <script id="employee-li-tpl" type="text/x-handlbars-template">
@@ -27,6 +27,6 @@
   <script src="js/storage/memory-store.js"></script>
   <script src="js/HomeView.js"></script>
   <script src="js/main.js"></script>
-
+  <script src="lib/iscroll.js"></script>
 </body>
 </html>
