--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li>
           <a href="sms:{{cellPhone}}">SMS<br/>{{cellPhone}}</a>
         </li>
+        <li><a href="#" class="add-location-btn">Add Location</a></li>
       </ul>
     </div>
   </script>
