--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <a href="sms:{{cellPhone}}">SMS<br/>{{cellPhone}}</a>
         </li>
         <li><a href="#" class="add-location-btn">Add Location</a></li>
+        <li><a href="#" class="add-contact-btn">Add to Contacts</a></li>
       </ul>
     </div>
   </script>
