--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </li>
         <li><a href="#" class="add-location-btn">Add Location</a></li>
         <li><a href="#" class="add-contact-btn">Add to Contacts</a></li>
+        <li><a href="#" class="change-pic-btn">Change Picture</a></li>
       </ul>
     </div>
   </script>
